# RealNote

./: CMakeLists.txt  Collection.cpp  Collection.h  Note.cpp  Note.h  Observer.h  README.md  Subject.h  main.cpp
src/: CMakeLists.txt  Collection.cpp  Collection.h  Note.cpp  Observer.h  Starred.cpp  Starred.h  Subject.h
tests/: CMakeLists.txt  CollectionTest.cpp  NoteTest.cpp  StarredTest.cpp
